# Graffiks

./: .clang-format  .gitignore  .gitmodules  AndroidManifest.xml  CMakeLists.txt  DoxygenLayout.xml  LICENSE  README  README.md  annotated.html  annotated.js  build.xml  camera_8h.html  camera_8h.js  camera_8h_a47fa771c75129e33130c7e0cb7f9b93f.html  camera_8h_a4e069f0777de2b334c2366d8f25f69bc.html  camera_8h_acb4628aca0a1f949f45fe2e63f806618.html  camera_8h_ae817de3071343d83c0fc8d42f39a5dd5.html  classGraffiks-members.html  classGraffiks.html  classes.html  classgfks__context.html  classgfks__context.js  cube__mesh_8h.html  cube__mesh_8h.js  dir_017ad5e908c41501f6a06b5119b37293.html  dir_0d447b7c6a9429720774ea7630d7ccce.html  dir_2ae8ab598bd49dbf6ce450db813cd435.html  dir_2ae8ab598bd49dbf6ce450db813cd435.js  dir_2d8bb538395afafdd9aac59799b41db9.html  dir_2f24e9380c1fd530bd56386fa62ed242.html  dir_3ac800b4b89b62a089436d8d41568ef8.html  dir_4db3a2f7aa3a8b9901e70dfeb2571af9.html  dir_50e4665a72d7148ccbd7c22d93c0a518.html  dir_50e4665a72d7148ccbd7c22d93c0a518.js  dir_5bf3f5f5b6e3cdba0a92de7a44d4956a.html  dir_63845ec17d71e3b16da0b4e7f327342a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7bc5e25958a2fb25a8561f3aa0def6c5.html  dir_7be0d8c199b9408ae01f5d77515b8def.html  (+92 more)
android/: build.xml
html/: annotated.html  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_2ae8ab598bd49dbf6ce450db813cd435.html  dir_2f24e9380c1fd530bd56386fa62ed242.html  dir_4db3a2f7aa3a8b9901e70dfeb2571af9.html  dir_50e4665a72d7148ccbd7c22d93c0a518.html  dir_5bf3f5f5b6e3cdba0a92de7a44d4956a.html  dir_63845ec17d71e3b16da0b4e7f327342a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7bc5e25958a2fb25a8561f3aa0def6c5.html  dir_7be0d8c199b9408ae01f5d77515b8def.html  dir_999568d926189d653da99998a3aedffe.html  dir_a18187bbfdff448b5e028e9a969fd371.html  dir_a18187bbfdff448b5e028e9a969fd371.js  dir_a6ddd07b3449dcff0160d7a9814433b5.html  dir_af1903a6e1cac713ffcaadc12ed84744.html  dir_bb043af75e54e1af3032f67529bb720c.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ede7b55ad41796b39c3ce85780335891.html  files.html  globals.html  globals_func.html  globals_vars.html  index.html  lights_8h.html  lights_8h.js  navtreedata.js  navtreeindex0.js  structface__group.html  structgfks__base__mesh.html  structgfks__mesh.html  structgfks__named__material.html  structgfks__named__material__array.html  structgfks__object.html  structgfks__point__light.html  structgfks__render__queue__item.html  structgfks__render__queue__item.js  structmat.html
include/: cube_mesh.h  driver-linux.h  gl_helper.h  governor.h  graffiks.h  lights.h  material.h  mesh.h  obj_loader.h  object.h  plane_mesh.h  renderer.h  triangle_mesh.h
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_3.js  files_4.js  files_6.js  files_7.js  functions_0.js  groups_0.js  searchdata.js  variables_1.js
src/: camera.c  context.c  cube_mesh.c  device.c  device_queue_utils.c  driver-jni-android.c  driver-linux.c  dt_callbacks.c  dt_loop.c  gl_helper.c  governor.c  graffiks.c  lights.c  material.c  mesh.c  obj_loader.c  object.c  plane_mesh.c  render_pass.c  render_plan.c  renderer.c  shader.c  subpass.c  surface.c  surface_utils.c  util.c  (+1 more)
(+291 files in other folders)
